# edit

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: lib.rs
src/: buffer.rs  framebuffer.rs  lib.rs  main.rs  memchr.rs  sys.rs  tui.rs
src/buffer/: mod.rs
src/sys/: uefi.rs  unix.rs  windows.rs
