[package]
name = "edit"
version = "0.1.0"
edition = "2024"

[features]
debug-layout = []
debug-latency = []

[profile.release]
codegen-units = 1
debug = "full"
lto = true
panic = "abort"
debug-assertions = true # Temporary while I test this

[dependencies]

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { version = "0.34.1", features = [ "alloc", "global_allocator", "logger", "log-debugcon" ] }
qemu-exit = { version = "3.0.2" }
r-efi = { version = "5.2.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
]
